--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -11,8 +11,8 @@
     <!-- Menú superior -->
     <nav class="navbar">
         <div class="logo">
-            <img src="images/logo.png" alt="Logo Postres Mejishet">
-            <span>Postres Mejishet</span>
+            <img src="images/logo.png" alt="Logo Postres Melishet">
+            <span>Postres Melishet</span>
         </div>
         <ul class="nav-menu">
             <li><a href="inicio.html" class="active">INICIO</a></li>
@@ -25,12 +25,11 @@
     <!-- Contenido principal -->
     <main class="main-content">
         <div class="hero-section">
-            <img src="images/baner.jpg" alt="Postres deliciosos" class="hero-image">
+            <img src="imagenes/baner.jpg" alt="Postres deliciosos" class="hero-image">
             <div class="hero-text">
                 <h1>"MEJORAMOS CADA DÍA PARA HACER TU VIDA MÁS DULCE"</h1>
             </div>
         </div>
-        
         <section class="features">
             <div class="feature-card">
                 <div class="feature-icon">
