--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -98,8 +98,8 @@
             <div class="info-pedidos">
                 <h3><i class="fas fa-info-circle"></i> Información del Pedido</h3>
                 <ul>
-                    <li><i class="fas fa-check-circle"></i> Pedido mínimo: 10 Bs</li>
-                    <li><i class="fas fa-shipping-fast"></i> Entrega en 24-48 horas</li>
+                    <li><i class="fas fa-check-circle"></i> Pedido mínimo: 100 Bs</li>
+                    <li><i class="fas fa-shipping-fast"></i> Entrega en 15-30 minutos</li>
                     <li><i class="fas fa-money-bill-wave"></i> Pago contra entrega</li>
                     <li><i class="fas fa-phone-alt"></i> Confirmaremos tu pedido por teléfono</li>
                     <li><i class="fas fa-map-pin"></i> Servicio dentro de la ciudad</li>
