--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -13,7 +13,7 @@
     <nav class="navbar">
         <div class="logo">
             <img src="../images/logo.png" alt="Logo Postres Mejishet">
-            <span>Postres Mejishet</span>
+            <span>Postres Melishet</span>
         </div>
         <ul class="nav-menu">
             <li><a href="../index.html">INICIO</a></li>
@@ -36,9 +36,9 @@
                         <i class="fab fa-instagram"></i>
                     </div>
                     <div class="red-info">
-                        <h3>@Postres Methnet</h3>
+                        <h3>@Postres Melishet</h3>
                         <p>Síguenos en Instagram para ver nuestras novedades</p>
-                        <a href="https://instagram.com/PostresMethnet" target="_blank" class="red-link">
+                        <a href="https://www.instagram.com/postres_melishet?utm_source=qr&igsh=MTFvejN3Zm45OXd0bA==" target="_blank" class="red-link">
                             <i class="fas fa-external-link-alt"></i> Visitar perfil
                         </a>
                     </div>
@@ -49,9 +49,9 @@
                         <i class="fab fa-facebook"></i>
                     </div>
                     <div class="red-info">
-                        <h3>@postres.inshibet</h3>
+                        <h3>@postres.melishet</h3>
                         <p>Conéctate con nosotros en Facebook</p>
-                        <a href="https://facebook.com/postres.inshibet" target="_blank" class="red-link">
+                        <a href="https://facebook.com/postres.melishet" target="_blank" class="red-link">
                             <i class="fas fa-external-link-alt"></i> Visitar página
                         </a>
                     </div>
@@ -63,9 +63,9 @@
                     </div>
                     <div class="red-info">
                         <h3>WhatsApp</h3>
-                        <p>+591 74005712</p>
+                        <p>+591 74805712</p>
                         <p>Horario: 8:00 AM - 8:00 PM</p>
-                        <a href="https://wa.me/59174005712" target="_blank" class="btn-whatsapp">
+                        <a href="https://wa.me/59174805712" target="_blank" class="btn-whatsapp">
                             <i class="fab fa-whatsapp"></i> Enviar mensaje
                         </a>
                     </div>
@@ -77,9 +77,9 @@
                     </div>
                     <div class="red-info">
                         <h3>Correo Electrónico</h3>
-                        <p>extravendateng@mail.com</p>
+                        <p>postresmelishet@mail.com</p>
                         <p>Respondemos en 24 horas</p>
-                        <a href="mailto:extravendateng@mail.com" class="red-link">
+                        <a href="postresmelishet@mail.com" class="red-link">
                             <i class="fas fa-paper-plane"></i> Enviar correo
                         </a>
                     </div>
@@ -117,7 +117,7 @@
                     <h3><i class="fas fa-map-marker-alt"></i> Ubicación</h3>
                     <div class="mapa">
                         <p><i class="fas fa-store"></i> Punto de venta principal</p>
-                        <p class="direccion">Calle Principal #123, Ciudad</p>
+                        <p class="direccion">Calle Belzu #123, Ciudad Cochabamba</p>
                     </div>
                 </div>
             </div>
